policies/opa/require-resource-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: require-resource-limits
spec:
  match:
    kinds:
      - apiGroups: ['']
        kinds: [Pod]
    excludedNamespaces: [kube-system, gatekeeper-system, crossplane-system, argocd]
  parameters:
    limits: [cpu, memory]
    requests: [cpu, memory]
